Fix zoom on smaller image

--- a/animcordmain.css
+++ b/animcordmain.css
@@ -37,6 +37,7 @@ a>.assetsLargeImageUserPopout-pY2WJv[src^="https://i.scdn.co/image/"]:hover .too
 {
     border-radius: 10px;
     transition: transform 200ms;
+    width: auto !important;
 }
 .item-1OdjEX,
 .embedSpotify-1rDvOE.embedWrapper-1MtIDg{
